@@ -8,6 +8,7 @@
 - make do_connect() return a status.
 - make connect_to_server() return a status.
 - make find_dc_server() return a status.
+- make find_server() return a status.
 
 21/04/2015 autofs-5.1.1
 =======================
